--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,19 @@ VideoSearch/bin/Debug/7.ahnu
 VideoSearch/bin/Debug/VideoSearch.exe.config
 VideoSearch/bin/Debug/VideoSearch.vshost.exe.config
 VideoSearch/bin/Debug/VideoSearch.vshost.exe.manifest
+VideoSearch/bin/Debug/20131208search_info.ahnu
+VideoSearch/bin/Debug/20131211search_info.ahnu
+VideoSearch/bin/Debug/config.ahnu
+VideoSearch/bin/Debug/server_list.ahnu
+VideoSearch/bin/Debug/version.xml
+VideoSearch/bin/x86/Release/VideoSearch.exe.config
+VideoSearch/bin/x86/Release/VideoSearch.vshost.exe.config
+VideoSearch/bin/x86/Release/VideoSearch.vshost.exe.manifest
+VideoSearch/obj/x86/Release/VideoSearch.AboutSoftWareForm.resources
+VideoSearch/obj/x86/Release/VideoSearch.DownLoadForm.resources
+VideoSearch/obj/x86/Release/VideoSearch.ExploreForm.resources
+VideoSearch/obj/x86/Release/VideoSearch.MainForm.resources
+VideoSearch/obj/x86/Release/VideoSearch.Properties.Resources.resources
+VideoSearch/obj/x86/Release/VideoSearch.ScheduleListView.resources
+VideoSearch/obj/x86/Release/VideoSearch.SetForm.resources
+VideoSearch/obj/x86/Release/VideoSearch.csproj.FileListAbsolute.txt
