--- a/VideoSearch/VideoSearch.csproj
+++ b/VideoSearch/VideoSearch.csproj
@@ -90,8 +90,10 @@
     </Compile>
     <Compile Include="service\SearchService.cs" />
     <Compile Include="service\DownloadService.cs" />
+    <Compile Include="service\WebService.cs" />
     <Compile Include="service\XMLService.cs" />
     <Compile Include="utils\ComboBoxItem.cs" />
+    <Compile Include="utils\ContentType.cs" />
     <Compile Include="utils\FileCheck.cs" />
     <Compile Include="utils\StringSimilarity.cs" />
     <Compile Include="utils\Constant.cs" />
@@ -127,6 +129,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utils\Message.cs" />
     <Compile Include="utils\MsgString.cs" />
+    <Compile Include="utils\WebConstant.cs" />
     <EmbeddedResource Include="formList\AboutSoftWareForm.resx">
       <DependentUpon>AboutSoftWareForm.cs</DependentUpon>
     </EmbeddedResource>
