--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ VideoSearch/obj/x86/Release/VideoSearch.Properties.Resources.resources
 VideoSearch/obj/x86/Release/VideoSearch.ScheduleListView.resources
 VideoSearch/obj/x86/Release/VideoSearch.SetForm.resources
 VideoSearch/obj/x86/Release/VideoSearch.csproj.FileListAbsolute.txt
+VideoSearch/bin/
