--- a/VideoSearch/VideoSearch.csproj
+++ b/VideoSearch/VideoSearch.csproj
@@ -211,6 +211,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formList\DownLoadForm.resx">
       <DependentUpon>DownLoadForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="formList\ExploreForm.resx">
       <DependentUpon>ExploreForm.cs</DependentUpon>
