--- a/VideoSearch/VideoSearch.csproj
+++ b/VideoSearch/VideoSearch.csproj
@@ -174,6 +174,7 @@
     <Compile Include="utils\ComboBoxItem.cs" />
     <Compile Include="utils\ContentType.cs" />
     <Compile Include="utils\FileCheck.cs" />
+    <Compile Include="utils\ServerListTools.cs" />
     <Compile Include="utils\StringSimilarity.cs" />
     <Compile Include="utils\Constant.cs" />
     <Compile Include="formList\DownLoadForm.cs">
